Lab03: Fix spacing issue with footer

--- a/lab03/styles.scss
+++ b/lab03/styles.scss
@@ -63,8 +63,6 @@ footer {
     color: $white;
     margin-top: 10px;
     padding: 20px;
-    position: absolute;
-    width: 99%;
 
     span {
         margin: 15px;
